# snake_game

./: .gitignore  CMakeLists.txt  README.md  common.h  fruit.c  fruit.h  gfx.c  gfx.h  main.c  snake.c  snake.h
